# tauri-plugin-sql

./: Cargo.toml  package.json
src/: plugin.rs
