[package]
name = "tauri-plugin-sql"
version = "0.1.0"
description = "Interface with SQL databases."
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
tauri = "2.0.0-alpha.2"

[features]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]